--- a/game-events/src/main/resources/application.properties
+++ b/game-events/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/game_events_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/game_events_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -20,7 +20,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-
 # Logging Configuration
 logging.level.org.springframework=INFO
 logging.level.com.example.game_events=DEBUG
