--- a/game-events/src/main/resources/application.properties
+++ b/game-events/src/main/resources/application.properties
@@ -34,3 +34,8 @@ spring.servlet.multipart.max-request-size=10MB
 spring.security.user.name=admin
 spring.security.user.password=admin123
 
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+spring.resources.static-locations=classpath:/static/
+spring.resources.cache.period=0
