--- a/game-events/dockerfile
+++ b/game-events/dockerfile
@@ -6,3 +6,12 @@ ENV MYSQL_USER=app
 ENV MYSQL_PASSWORD=app
 
 
+FROM openjdk:17-jdk-slim
+
+WORKDIR /app
+
+COPY target/*.jar app.jar
+
+EXPOSE 8080
+
+ENTRYPOINT ["java", "-jar", "app.jar"]
