--- a/game-events/src/main/resources/application.properties
+++ b/game-events/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.thymeleaf.mode=HTML
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/game_events_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Toalla.77
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
@@ -35,3 +35,41 @@ spring.servlet.multipart.max-request-size=10MB
 spring.security.user.name=admin
 spring.security.user.password=admin123
 
+
+# Configuración de Cookies
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.same-site=strict
+
+# Configuraciones adicionales de seguridad
+server.servlet.session.timeout=30m
+
+# Configuración del controlador de errores
+server.error.whitelabel.enabled=false
+server.error.path=/error
+
+# Habilitar la compresión de respuestas para mejorar el rendimiento
+server.compression.enabled=true
+server.compression.mime-types=text/html,text/xml,text/plain,text/css,application/javascript,application/json
+
+# Configuración para establecer siempre HTTPS
+server.forward-headers-strategy=native
+
+# Configuración para errores
+server.error.whitelabel.enabled=false
+server.error.include-stacktrace=never
+server.error.include-binding-errors=never
+server.error.include-message=never
+server.error.path=/error
+
+# Habilitar Tomcat para preservar y renombrar las cabeceras
+server.tomcat.use-relative-redirects=true
+# Configuración para que Tomcat respete web.xml
+server.servlet.jsp.registered=true
+
+# Configuración para cabeceras seguras
+server.tomcat.additional-tld-skip-patterns=*.jar
+
+# Desactivar la página de error blanca predeterminada
+server.error.whitelabel.enabled=false
+server.error.path=/error
