--- a/game-events/docker-compose.yml
+++ b/game-events/docker-compose.yml
@@ -2,15 +2,19 @@ version: '3'
 
 services:
   app:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8080:8080"
-    restart: always
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:mysql://host.docker.internal:3306/game_events_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=password
     networks:
       - app-network
-
+    restart: always
 
 networks:
   app-network:
     driver: bridge
-
